# PulsarAI-

./: .dockerignore  .env.example  .gitignore  AI_Trading_Bot_Project_Plan.md  LICENSE  README.md  project.mdc  pyproject.toml  requirements.txt
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_features_primary_key.py
api/: __init__.py  main.py
api/routes/: config.py  (+3 more)
backtesting/: __init__.py  data_loader.py  engine.py  fees.py  metrics.py  models.py  report_generator.py  walk_forward.py
bot/: __init__.py  main.py
config/: __init__.py  logging_config.py  settings.py
data/: __init__.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
execution/: __init__.py  binance_executor.py  fee_optimizer.py  models.py  order_manager.py  paper_executor.py  trade_repository.py
models/: __init__.py  common.py  ensemble.py  regime_classifier.py  regime_labeling.py  rl_agent.py  rl_env.py  sentiment_model.py  tft_model.py
monitoring/: __init__.py  daily_summary.py  drift_detector.py  extended_health.py  health_check.py  metrics.py  performance_tracker.py  scheduler.py  telegram_alerts.py  telegram_bot.py  telegram_commands.py
risk/: __init__.py  circuit_breaker.py  models.py  position_sizer.py  risk_manager.py
scripts/: compute_features.py  deploy.sh  download_history.py  paper_trade.py  predict_signal.py  run_backtest.py  setup_db.py  train_models.py
services/: __init__.py  portfolio_service.py
strategy/: base.py  signal_generator.py  simple_ma.py
tests/: conftest.py
(+26 files in other folders)
